[package]
name = "vortex"
version = "0.1.0"
edition = "2021"
description = "Physics engine with rigid body dynamics and collision detection"
license = "MIT"
repository = "https://github.com/sudokatie/vortex"
keywords = ["physics", "collision", "game", "simulation", "gjk"]
categories = ["game-development", "simulation"]

[dependencies]
glam = { version = "0.25", features = ["bytemuck"] }
arrayvec = "0.7"
bitflags = "2.0"
slotmap = "1.0"
bytemuck = { version = "1.14", features = ["derive"] }

[dev-dependencies]
criterion = "0.5"

[features]
default = ["3d"]
2d = []
3d = []

[[example]]
name = "falling_boxes"
path = "examples/falling_boxes.rs"

[[example]]
name = "pendulum"
path = "examples/pendulum.rs"

# Benchmarks will be added later
# [[bench]]
# name = "collision"
# harness = false
